--- a/src/style/partials/app.scss
+++ b/src/style/partials/app.scss
@@ -1,3 +1,15 @@
 body{
+  margin-top: 50px;
+}
 
+.grid-item{
+  width: 100%;
+}
+
+.btn{
+  &:focus,&:active{
+    outline: none;
+    box-shadow: none;
+    border: none;
+  }
 }
