--- a/src/style/partials/app.scss
+++ b/src/style/partials/app.scss
@@ -18,3 +18,15 @@ button{
     border: none;
   }
 }
+
+.card{
+  flex-direction: row;
+  align-items: center;
+  .card-img{
+    flex: 0 0 39px;
+    height: 150px;
+    background: center center no-repeat;
+    background-size: contain;
+    margin: 15px;
+  }
+}
